--- a/build-jenkins-agent.yaml
+++ b/build-jenkins-agent.yaml
@@ -7,3 +7,5 @@ spec:
     - name: ez-docker-helm-build
       image: ezezeasy/ez-docker-helm-build:1.41
       imagePullPolicy: Always
+      securityContext:
+        privileged: true
